BasicDemo/force-app/main/default/objects/Equipment__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Developer__c</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>