BasicDemo/force-app/main/default/objects/Equipment__c/fields/Disposed__c.field-meta.xml
<CustomField>
    <fullName>Disposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disposed</label>
    <type>Checkbox</type>
</CustomField>