BasicDemo/force-app/main/default/objects/Equipment__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <formula>Used_Since__c + 183</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>