BasicDemo/force-app/main/default/objects/Equipment__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>Expiration__c &lt; TODAY()</formula>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>