BasicDemo/force-app/main/default/objects/Equipment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>