BasicDemo/force-app/main/default/objects/Equipment__c/fields/Used_Since__c.field-meta.xml
<CustomField>
    <fullName>Used_Since__c</fullName>
    <label>Used Since</label>
    <type>Date</type>
</CustomField>